--- a/src/App.css
+++ b/src/App.css
@@ -31,5 +31,11 @@
 }
 
 .game{
-  
+  position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+display: flex;
+flex-direction: row;
+margin: 0 auto;  
 }
